UI Guide，完成开发App Layout章节，Inset（控制系统栏、处理全屏显示的UI遮盖问题）、cutout、software keyboard动画，view性能优化（扁平化布局也就是避免布局嵌套多层、include复用布局、meger消除多余的root view、ViewStub按需加载view）。此章节的webview在下一次完成。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,7 @@
     <string name="done">完成</string>
     <string name="people">用户\n</string>
     <string name="span_string">Best practices for<annotation font="title_emphasis">text</annotation> on Android</string>
+    <string name="hello_fab_action">Hello</string>
+    <string name="float_fab_content_desc">float button</string>
+    <string name="please_inoput_name">please inoput name.</string>
 </resources>
